# uct_bench

./: .env.example  .gitignore  README.md  pyproject.toml
backend_api/: __init__.py  database.py  main.py
backend_api/jobs/: __init__.py  progress.py  workers.py
backend_api/models/: __init__.py
backend_api/routers/: __init__.py  datasets.py  jobs.py  leaderboard.py  results.py  submissions.py
docs/: MISSINGNESS_PREPROCESSING_AND_SIMULATION.md  OUTPUTS_AND_DATABASE_INSPECTION.md  PIPELINE_RUNBOOK.md  PIPELINE_SYSTEM_GUIDE.md  README.md  RESULT_ARTIFACTS_GUIDE.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
scripts/: foundation_smoke_check.py  run_pipeline_demo.py
tests/: test_dataset_comparison.py  test_pipeline_controller.py  test_worker_reference_loading.py
uct_benchmark/: __init__.py  logging_config.py  settings.py
uct_benchmark/api/: __init__.py  apiIntegration.py
uct_benchmark/config/: __init__.py  dataset_schema.py
uct_benchmark/data/: __init__.py  basicScoringFunction.py  dataManipulation.py  missingness.py  readData.py
uct_benchmark/database/: __init__.py  __main__.py  cli.py  connection.py  export.py  ingestion.py  migration.py  repository.py  schema.py  schema.sql  schema_postgres.sql
uct_benchmark/evaluation/: __init__.py  binaryMetrics.py  datasetComparison.py  evaluationReport.py  orbitAssociation.py  residualMetrics.py  stateMetrics.py
uct_benchmark/pipeline/: __init__.py  orchestration.py  routing_methods.py  (+2 more)
(+57 files in other folders)
