[project]
name = "uct_benchmark"
version = "1.0.0"
description = "UCT Benchmark - Combined Pipeline and Demo UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core pipeline (from Kelvin's)
    "aiohttp>=3.13.0",
    "astropy>=7.1.1",
    "customtkinter>=5.2.2",
    "duckdb>=1.4.1",
    "loguru",
    "matplotlib",
    "nest-asyncio",
    "numpy",
    "orekit-jpype>=13.1.2.1",
    "pandas",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "python-dotenv",
    "requests>=2.32.5",
    "scikit-learn",
    "scipy",
    "tqdm",
    "typer",
    # Backend API (for frontend)
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff>=0.14.0",
    "httpx",
    "testcontainers[postgres]>=4.0.0",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]
postgres = [
    "pg8000>=1.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uct_benchmark"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
